<resources>
    <string name="app_name">Easy 장애인고용</string>
    <string name="minimumage">2010580</string>
    <string name="basisamount">1207000</string>
    <string name="title">장애인고용 부담금 간단계산기</string>
    <string name="setting">설정</string>
    <string name="save">저장</string>
    <string name="load">열기</string>
    <string name="delete">삭제</string>
    <string name="keadintro">
        한국장애인고용공단 장애인이 직업생활을 통해 자립할 수 있도록 지원하고 사업주의 장애인 고용을 전문적으로 지원하기 위하여 공단을 설립 장애인고용촉진 및 직업재활법 제43조
        ▷ 장애인 취업지원 및 직업능력개발
        - 장애인직업상담, 직업적성검사, 직업능력평가 등 직업지도  |  장애인 취업알선, 취업 후 적응지도
        - 장애인의 직업적응훈련 및 직업능력개발훈련 시설 운영▷ 장애인 취업지원 및 직업능력개발
        ▷ 사업주의 장애인 고용 지원
        - 사업주의 장애인 고용의무 이행 및 고용관리 지원
        - 사업주의 장애인 고용환경 개선, 장애인 표준사업장 설립 지원
        - 사업주의 연계고용 지원 및 장애인 고용장려금 지급 등
        ▷ 장애인 고용여건 조성
        - 장애인 고용의무 미이행 사업주에 대한 고용부담금 징수
        - 장애인 고용에 관한 정보의 수집ㆍ분석ㆍ제공 및 조사 연구
        - 장애인 고용촉진을 위한 홍보ㆍ교육, 기능경기대회 관련 사업
    </string>
    <string name="viewVideo1">한국장애인고용공단 공식블로그</string>
    <string name="viewVideo2">직장내 장애인 인식개선교육 영상</string>
    <string name="busan1">
부산직업능력개발원 [http://campus.kead.or.kr/busan]
▷ 영남권 최초로 설립된 장애인공공훈련기관
- 서비스권역: 부산, 울산, 경남    |  개교: 2000년 9월
-  대지: 44,276m2 (13,417 平)  |  연면적: 15,026m2   |  건평: 7,511m2
- 장애인취업률: 94%(NEXON, NCSoft, 삼성중공업, 장애인표준사업장)_2019년 기준

▷ 장애인 직업훈련 안내
- 직업재활프로그램: 직업능력평가, 재활프로그램(의료, 사회성, 신체관리능력 등), 취업성공패키지
- 전략적 인재양성: 융복합훈련(기능계열), 특화훈련(외식, 지적특화, 산학연계, 여성특화), 단기직무ㆍ재직향상PG▷ 일을 통한 장애인의 완전한 사회참여

▷ 장애인 직업훈련 안내
- 훈련기간: 1개월 이상 1년 이내(수시입학/수시수료)
- 훈련비용: 전액 국가예산 지원(교재/수당지급 등), 상해보험 가입, 생활관 및 통학버스 이용
- 전원 취업알선(수료시 필수), 취업 후 사후지원서비스 실시_년 4회
    </string>
    <string name="busan2">
교육훈련 주요내용
▷ 융복합훈련 : 전략적 인재양성으로 일을 통한 완전한 사회참여
① 기계ㆍ자동제어      ② 전자ㆍ드론제어         ③ 정보기술
④ 건축ㆍ인테리어    ⑤ 컴퓨터그래픽디자인
▷ 특화훈련 : 대상별, 목적별 수요에 따라 다양한 서비스 제공
    </string>
    <string name="busan3">
산학연계훈련
▷ 산학연계훈련이란?
- 기업의 직무수요에 따라 직업능력개발원과 기업이 훈련 내용, 훈련수준, 훈련방법 등에 대하여 사전 협의하고,
- 희망자 별도 모집하여,  선발한 후 약정에 따라 실시하는 훈련,  이수 훈련생은 사업체가 우선 채용

▷ 산학연계훈련 어떻게 진행되는가?
직무분석과 교과 설계→     훈련 약정과 대상 모집→     대상자 선발과 직무교육 훈련→     이수, 결과 리포트→       채용과 사후지원

▷ 산학연계훈련 무엇을 기재할 수 있나?
- 기업의 사회적 책임과 역할 수행으로 기업 이미지 제고 / 신입사원 OJT교육 대체로 시간과 경비 절감
-  고용 수요에 따른 인력 Pool 사전 확보 / 사후지원  서비스(고용관리)


▷ 산학연계훈련 어떤 사례가 있나?
대기업부터 중소기업까지… 삼성전자, E-mart, NCSoft, 양산부산대학교병원 등 다수
    </string>
    <string name="busan4">
훈련사례Ⅰ [게임산업]
▷ NEXON
- 훈련직무: 서비스운영기획, 유지보수, 커뮤니티 동향파악ㆍ이슈 게시글 모니터링
- 훈련내용: 게임운영서비스, 모니터링실무, 문서실무(실용문서), CS교육, 직장예절
- 훈련결과: 게임운영서비스 직무교육 / 2011년부터 매년 5명이상 훈련 및 취업
   ※ 부울경 게임산업의 시초, 이후 게임물관리위원회, 엔씨소프트  등 직무 확대(온라인 게임운영 등)

▷ NCSoft
- 훈련직무: 온라인ㆍ모바일 게임상담, 직원 및 고객에 대한 감성서비스(네일케어서비스)
- 훈련내용: 게임운영서비스, 모니터링실무,  스마트폰 활용, 문서실무(실용문서), 네일아트, CS교육, 심리상담
- 훈련결과: 온라인/모바일 게임상담 / 2019년 산학협력 훈련이수자 15명 전원 취업
   ※ 내부직원 및 외부 고객에 대한 네일케어서비스 직무확대
    </string>
    <string name="busan5">
훈련사례 Ⅱ [재택근무]
▷ 게임물관리위원회
- 훈련직무: 게임물관리 모니터링(자체등급 출시 게임물의 사후 모니터링)
- 훈련내용: 게임물관리, 모니터링실무, 자체등급분류기준, 스마트폰 활용, 문서실무
- 훈련결과: 산학연계 특화훈련과정 / 2019년 43명 교육이수 후 100% 전원 취업
   ※ 단시간(4시간) 재택근무로 전 장애유형 직무접근 가능(온라인 근무환경)
    </string>
    <string name="busan6">
훈련사례 Ⅲ [대기업]
▷ 삼성중공업 사내협력사 협의회
- 훈련직무: 사무지원(사무행정, 전산회계), 현장지원(선박용접, 전기, 조적, 선박도장, 공정기사, 불ㆍ밀폐감시)
- 훈련내용: 산업안전, 조선직무분석(공정, 용어), 전공기술(실습과 이론), 사회성훈련(직장예절, 스트레스 관리 등)
- 훈련결과: 산학연계 특화훈련과정 / 2015년 부터 현재까지 382명 (중증장애인 215명) 취업
   ※ 135개 삼성중공업 사내협력사의 1인1사 장애인 착한고용
                                                                    → ‘15년 행정자치부 주관 정부3.0 경진대회 대통령상 수상
    </string>
    <string name="busan7">
훈련사례 Ⅳ [의료기관]
▷ 창원경상대학교병원
- 훈련직무: 병동관리, 원무과지원, 중앙공급실지원, 고객지원, CD영상물관리,
- 훈련내용: 병원코디네이터, CS교육, 사회성훈련(직장예절, 임상심리 등), 사무OA실무 등
- 훈련결과: 창원맞춤훈련센터 맞춤훈련과정 / 2017년부터 현재까지 23명 교육이수 후 100% 전원 취업
   ※ 단시간(4시간) 근무로 정신장애, 신장장애 등 경력단절 여성장애인에 유리
   ※ 부ㆍ울ㆍ경 대학의료기관 및 민간의료까지 의료직무 파급 효과
    </string>
    <string name="busan8">
훈련사례 Ⅴ [대학기관]
▷ 동아대학교, 경남대학교

- 훈련직무: 컴퓨터지키미(컴퓨터실 관리직무), 도서관 사서지원
- 훈련내용: 컴퓨터조립,  시설관리, 문서실무(사서전공기술), 사회성훈련(직장예절, 스트레스 관리 등)  등
- 훈련결과: 장애인인식개선 후 사업전개, 장년장애인 대상으로 맞춤훈련 / 2018년 부터 현재까지 15명 취업
   ※ 위기를 기회로 바꾸는 장애인 고용사례(사립대학의 재정부담 및 애로사항이 오히려 장애인 경쟁력 강화 계기)
    </string>
    <string name="busan9">
훈련사례 Ⅵ [공공기관]
▷ 한국시설안전공단
- 훈련직무: 설계지원, 감리지원, 사무지원(사무행정), 전산회계
- 훈련내용: CAD, 전공기술(도면/감리), 전산회계, 산업안전, CS교육, 사회성훈련(직장예절, 스트레스 관리 등)
- 훈련결과: 무기계약직 장애인 고용 / 2017년 부터 현재까지 12명 취업
   ※ 우수장애인 고용 선점과 타 공공기관으로의 전파 및 확산효과(채용ㆍ체험형 인턴 등)
    </string>
    <string name="busanPhoto">부산직능원 전경 사진</string>
    <string name="busanMap">부산직능원 위치 지도</string>
    <string name="nextPage">다음페이지</string>
    <string name="mainbutton1">부담금/장려금 미리보기</string>
    <string name="mainbutton2">한국장애인고용공단 소개</string>
    <string name="mainbutton3">장애인 직업능력개발훈련 사업 소개</string>
    <string name="maintitle">easy장애인고용</string>
    <string name="chargetitle">장애인고용 부담금 간단계산기</string>
    <string name="granttitle">장애인고용 장려금 간단계산기</string>
    <string name="preview_charge">부담금 미리보기</string>
    <string name="preview_grant">장려금 미리보기</string>
</resources>
