<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Busan1Activity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/clip_sub_busan1"
        android:contentDescription="@string/busan1" />

    <ImageView
        android:layout_width="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/png_btn_prev"
        android:onClick="onCLickPrev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        android:contentDescription="@string/nextPage" />

    <ImageView
        android:layout_width="@dimen/_10sdp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/png_btn_next"
        android:onClick="onCLickNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        android:contentDescription="@string/nextPage" />
    <ImageView
        android:id="@+id/viewVideo1"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/png_sub_busan1_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        android:contentDescription="@string/busanPhoto" />

    <ImageView
        android:id="@+id/viewVideo2"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/png_sub_busan1_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        android:contentDescription="@string/busanMap" />
</androidx.constraintlayout.widget.ConstraintLayout>


<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@drawable/clip_sub_busan1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></LinearLayout>
            <LinearLayout
                android:onClick="onCLickNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:weightSum="1"></LinearLayout>
            <LinearLayout
                android:layout_weight="22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
-->