<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".KeadActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/clip_sub_kead"
        android:contentDescription="@string/keadintro" />

    <ImageView
        android:id="@+id/viewVideo1"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:onClick="onClickKeadService"
        android:src="@drawable/png_sub_kead01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:contentDescription="@string/viewVideo1" />

    <ImageView
        android:id="@+id/viewVideo2"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:onClick="onClickDisabledKnow"
        android:src="@drawable/png_sub_kead02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        android:contentDescription="@string/viewVideo2" />
</androidx.constraintlayout.widget.ConstraintLayout>


<!--

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/clip_sub_kead"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_weight="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:onClick="onClickKeadService"
                    android:layout_weight="1"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:onClick="onClickDisabledKnow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
-->